--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   background-color: #000;
   font-family: "Inter", sans-serif;
+  line-height: 1.2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
