--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "~antd/dist/antd.css";
+@import "~mapbox-gl/dist/mapbox-gl.css";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 body {
